# cs241-bluetooth-speaker

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Pico.ino  README.md  cs241-bluetooth-speaker.ino  flake.nix  main.cpp
.cargo/: config.toml
src/: led_logic.rs  main.rs
