[package]
edition = "2021"
name = "rp-w-counter"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
rp2040-hal = { version = "0.11.0", features = ["critical-section-impl", "rt"] }
rp2040-pac = "0.6.0"
rp2040-boot2 = "0.3.0"
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "1.0.0"
smart-leds = "0.4"
ws2812-pio = "0.9"                                                              # This was the version that worked
rp2040-flash = "0.6.0"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 1
debug = false
debug-assertions = false
opt-level = 3
overflow-checks = false
strip = true

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
